<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/gray"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">
            <ImageButton
                android:id="@+id/back_arrow"
                android:src="@drawable/arrow_back_24"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/gray"/>
            <Space
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_marginHorizontal="50dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_of_panel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/reg_pill"
                style="@style/TextTitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="마그네슘" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent"></Space>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:srcCompat="@drawable/pill_image" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/reg_time"
                style="@style/TextTitleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_time" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp">

                <TableRow android:gravity="center_horizontal">

                    <Button
                        style="@style/TextNormalWhiteBold"
                        android:layout_height="80dp"
                        android:layout_marginEnd="16dp"
                        android:width="120dp"
                        android:text="@string/breakfast"></Button>

                    <Button
                        style="@style/TextNormalWhiteBold"
                        android:layout_height="80dp"
                        android:width="120dp"
                        android:backgroundTint="@color/primary_light"
                        android:text="@string/lunch">

                    </Button>
                </TableRow>

                <TableRow android:gravity="center_horizontal">

                    <Button
                        style="@style/TextNormalWhiteBold"
                        android:layout_height="80dp"
                        android:layout_marginEnd="16dp"
                        android:width="120dp"
                        android:text="@string/dinner"></Button>

                    <Button
                        style="@style/TextNormalWhiteBold"
                        android:layout_height="80dp"
                        android:width="120dp"
                        android:backgroundTint="@color/primary_light"


                        android:text="@string/sleep"></Button>
                </TableRow>

                <!-- Add more rows as needed -->

            </TableLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/reg_nums"
                    style="@style/TextTitleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_nums" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"></Space>

                <Button
                    style="@style/TextNormalWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.0"></Button>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"></Space>

                <TextView
                    android:id="@+id/reg_metric"
                    style="@style/TextTitleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_metric" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"></Space>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/cancel_button"
        style="@style/TextSmallWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:text="@string/reg_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/scroll_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"></Button>

    <Button
        android:id="@+id/register_button"
        style="@style/TextSmallWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:text="@string/reg_reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scroll_view"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"></Button>

    <androidx.constraintlayout.widget.Guideline
        android:orientation="horizontal"
        android:id="@+id/top_of_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintGuide_begin="70dp" />

</androidx.constraintlayout.widget.ConstraintLayout>