<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="20dp"
        android:background="@color/gray"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <ImageButton
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/gray"
                android:src="@drawable/arrow_back_24" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/gray"
                android:src="@drawable/edit_24" />

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/gray"
                android:src="@drawable/delete_24" />

        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:paddingHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical" >


            <!-- 약이름 -->
            <TextView
                android:id="@+id/reg_name"
                style="@style/TextTitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="마그네슘" />

            <Space
                android:layout_height="20dp"
                android:layout_width="match_parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp">
                <ImageView
                    android:id="@+id/pill_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/pill_image" />
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_height="60dp"
                android:layout_width="match_parent"/>

            <!-- 복용시간 -->
            <TextView
                android:id="@+id/reg_time"
                style="@style/TextTitleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_time" />
            <Space
            android:layout_height="10dp"
            android:layout_width="match_parent"/>
            <Space
                android:layout_height="5dp"
                android:layout_width="match_parent"/>
            <TableLayout
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:gravity="center_horizontal">
                    <Button
                        android:id="@+id/morning_clock"
                        android:width="120dp"
                        android:layout_height="80dp"
                        android:backgroundTint="@color/primary_light"

                        android:layout_marginEnd="16dp"
                        android:text="@string/breakfast"
                        style="@style/TextNormalWhiteBold">
                    </Button>

                    <Button
                        android:id="@+id/lunch_clock"
                        android:width="120dp"
                        android:layout_height="80dp"
                        android:backgroundTint="@color/primary_light"
                        android:text="@string/lunch"
                        style="@style/TextNormalWhiteBold">

                    </Button>
                </TableRow>

                <TableRow
                    android:gravity="center_horizontal">
                    <Button
                        android:id="@+id/dinner_clock"
                        android:width="120dp"
                        android:layout_height="80dp"
                        android:backgroundTint="@color/primary_light"

                        android:layout_marginEnd="16dp"
                        android:text="@string/dinner"
                        style="@style/TextNormalWhiteBold">
                    </Button>
                    <Button
                        android:id="@+id/sleep_clock"
                        android:width="120dp"
                        android:layout_height="80dp"
                        android:text="@string/sleep"                        android:backgroundTint="@color/primary_light"


                        style="@style/TextNormalWhiteBold">
                    </Button>
                </TableRow>

                <!-- Add more rows as needed -->

            </TableLayout>

            <Space
                android:layout_height="60dp"
                android:layout_width="match_parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/reg_nums"
                    style="@style/TextTitleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_nums" />
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"></Space>
                <Button
                    android:id="@+id/pill_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.0"
                    style="@style/TextNormalWhite">
                </Button>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"></Space>
                <TextView
                    android:id="@+id/reg_metric"
                    style="@style/TextTitleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_metric" />
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"></Space>

            </LinearLayout>
            <Space
                android:layout_height="80dp"
                android:layout_width="match_parent"/>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>